Campaign Status Type added
